<resources>
    <string name="app_name">JavaDrone</string>
    <string name="title_activity_control_screen">ControlScreen</string>
    <string name="ok">OK</string>
    <string name="connection_error">Connection Error</string>
    <string name="drone_not_reachable">Could not reach Drone</string>
    <string name="emergency">Emergency</string>
    <string name="landing">Landing</string>
    <string name="takeoff">Take Off</string>
    <string name="drone_not_in_reach">No Drone in reach</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="show_config">Show Config</string>
    <string name="title_activity_settings_test">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_control_settings">ControlSettings</string>
    <string name="switch_to_manual">Switch to manual</string>
    <string name="show_settings">show Settings</string>
    <string name="automatic">Automatic</string>
    <string name="camera_sigal">Camera signal</string>
    <string name="show_controls">show controls</string>
    <string name="flyforward">flyForward</string>
    <string name="flyleft">flyleft</string>
    <string name="flyright">flyright</string>
    <string name="flyback">flyback</string>
</resources>
