<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_control_settings">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ControlScreen">

        <ImageView
            android:id="@+id/droneVideoStream"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/camera_sigal"
            android:scaleType="fitCenter"
            android:src="@drawable/drohne_video" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/automatic"
            android:id="@+id/toggle_automatic"
            android:layout_gravity="end|top" />

        <Button
            android:id="@+id/turnright"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="turnRight"
            android:text="i-"
            android:layout_gravity="right|center_vertical"
            android:layout_above="@+id/flyright"
            android:layout_alignRight="@+id/switch_screen"
            android:layout_alignEnd="@+id/switch_screen" />

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/settings_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/switch_screen"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#bdffffff"
            android:visibility="invisible"
            tools:context=".ControlScreen">

        </FrameLayout>

        <Button
            android:id="@+id/flyleft"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="flyLeft"
            android:text="&lt;-"
            android:layout_below="@+id/turnleft"
            android:layout_alignLeft="@+id/turnleft"
            android:layout_alignStart="@+id/turnleft" />

        <Button
            android:id="@+id/flyforward"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="flyForward"
            android:text="^"
            android:layout_alignTop="@+id/turnright"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/flyright"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="flyRight"
            android:text="->"
            android:layout_alignTop="@+id/takeoff"
            android:layout_alignLeft="@+id/turnright"
            android:layout_alignStart="@+id/turnright" />

        <Button
            android:id="@+id/flybackward"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="flyBackward"
            android:text="D"
            android:layout_below="@+id/flyright"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/turnleft"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="turnLeft"
            android:text="i-"
            android:layout_alignTop="@+id/flyforward"
            android:layout_alignLeft="@+id/switch_screen"
            android:layout_alignStart="@+id/switch_screen" />

        <Button
            android:id="@+id/takeoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:onClick="doTakeOff"
            android:text="@string/takeoff"
            android:layout_gravity="end|center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/emergency"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#da1f1f"
            android:enabled="true"
            android:onClick="doEmergency"
            android:text="@string/emergency" />

        <Button
            android:id="@+id/switch_screen"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginStart="75dp"
            android:onClick="switchScreen"
            android:text="@string/switch_to_manual" />

        <Button
            android:id="@+id/show_config"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/switch_screen"
            android:layout_toStartOf="@id/switch_screen"
            android:onClick="showManualControls"
            android:text="@string/show_controls" />


        <Button
            android:id="@+id/show_settings"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/switch_screen"
            android:layout_toRightOf="@id/switch_screen"
            android:onClick="showSettings"
            android:text="@string/show_settings" />

    </RelativeLayout>

</merge>